main.tf
terraform {
  backend "s3" {
    bucket = "terraform-awsapp-statefile-02"
    key    = "key/terraform.tfstate"
    region = "eu-north-1"
  }
}
provider "aws" {
  region = "eu-north-1"
}

# resource "aws_instance" "example" {
#   ami = "ami-0c1ac8a41498c1a9c"
#   instance_type = "t3.micro"
#   subnet_id = aws_subnet.data.id
  
#   tags = {
#     Name = "Instance Example"
#   }
# }
